crates/djls-python/tests/snapshots/corpus__repos__healthchecks__hc__front__templatetags__asciitable.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
---
tag_rules: {}
filter_arities: {}
block_specs:
  "hc.front.templatetags.asciitable::tag::table":
    end_tag: endtable
    intermediates: []
    opaque: false
